[package]
name = "savagestr"
version = "0.0.4"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/savagestr"
readme = "Readme.md"
description = "SAVAGE string encoder/decoder. If can encode or decode by specifying the code page or the encoding name, it works, else it uses the savage way to encode/decode by using `String::from_utf8_lossy()`"
keywords = ["string", "utf8", "mbcs", "i18n"]

[dependencies]
encoding = { version = "^0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "^0", features = ["Win32_Foundation", "Win32_Globalization"]}

[features]
default = ["text_encoding"]
text_encoding = ["dep:encoding"]

[lib]
name = "savagestr"
path = "src/savagestr.rs"
